[gd_scene load_steps=7 format=2]

[ext_resource path="res://TemporalAssets/spaceshooter/PNG/Enemies/enemyBlack2.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/HUD.gd" type="Script" id=2]
[ext_resource path="res://Juego/UI/ContenedorInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/UI/ContenedorInfoEnergia.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Aparecer"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="FadeCanvas" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="FadeCanvas"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0.0666667, 0, 0.258824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="FadeCanvas/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -82.5
margin_right = 103.5
margin_bottom = 82.5
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeCanvas"]
anims/Aparecer = SubResource( 1 )
anims/Default = SubResource( 2 )

[node name="ContenedorInfoRecarga" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0 )

[node name="ContenedorInfoMeteoritos" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 489.846
margin_bottom = 599.846
puede_auto_ocultar = true

[node name="Label" parent="ContenedorInfoMeteoritos" index="1"]
text = "Meteoritos
Restantes:
X
"

[node name="ContenedorInfoTiempo" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 3 )]
margin_left = 873.0
margin_right = 1023.0
margin_bottom = 83.0

[node name="Label" parent="ContenedorInfoTiempo" index="1"]
text = "Tiempo
Restante:
X
"

[node name="ContenedorInfoEnergiaLaser" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 4 )]
margin_left = 855.616
margin_top = 522.262
margin_right = 1022.62
margin_bottom = 599.262

[node name="Label" parent="ContenedorInfoEnergiaLaser" index="1"]
custom_colors/font_color = Color( 0.803922, 0.556863, 1, 1 )
text = "Energia Laser
"

[node name="ProgressBar" parent="ContenedorInfoEnergiaLaser" index="3"]
value = 100.0
percent_visible = true

[node name="ContenedorInfoEnergiaEscudo" parent="." groups=[
"contenedor_info",
] instance=ExtResource( 4 )]
margin_left = 855.616
margin_top = 442.385
margin_right = 1022.62
margin_bottom = 519.385

[node name="Label" parent="ContenedorInfoEnergiaEscudo" index="1"]
text = "Energia Escudo
"

[node name="ProgressBar" parent="ContenedorInfoEnergiaEscudo" index="3"]
value = 100.0
percent_visible = true

[editable path="ContenedorInfoRecarga"]
[editable path="ContenedorInfoMeteoritos"]
[editable path="ContenedorInfoTiempo"]
[editable path="ContenedorInfoEnergiaLaser"]
[editable path="ContenedorInfoEnergiaEscudo"]
